@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Fix Python Object.Say to automatically use the dialog system if in a dialog context.
+This makes the object talk after the player, like expected, without
+needing to change all scripts.
+Also, 'Say' is almost always used in reply to something said,
+so it makes sense.
+Nicolas Weeger 2010-09-02
+
 Fix broken Python Object.Take (inverted parameters).
 Nicolas Weeger 2010-09-02
 
